Webadmin/src/main/webapp/assets/css/custom.css
a:focus
{
 outline: none;
}
body
{
  font-size: 13px;
    background-color: #f9f9f9;
}
ul li
{
  list-style:none;
}
ul.checkList
{
  padding:0;
}
ul.checkList li
{
      padding: 2px 4px;
      background: #eeeeee;
      float: left;
      margin: 2px 3px;
      border-radius: 5px;
      font-size: 11px;
}
.box {
    position: relative;
    overflow: hidden;
    margin-bottom: 20px;
    border-radius: 2px;
    z-index: 1;
}
.SubNav
{
  padding-left:8px;
}

.bg-info .bg-info.darken, .bg-info.darken {
    background-color: #52bcdc!important;
    border-color: #2cadd4!important;
}

.box-cell {
    display: table-cell;
    overflow: hidden;
    padding: 0;
    vertical-align: inherit;
    border-color: rgba(0,0,0,.05);
}

.box-cell, .box-cell>* {
    position: relative;
}

.box-cell, .box-row {
    float: none;
}

.p-l-3, .p-x-3 {
    padding-left: 20px!important;
}

.p-r-3, .p-x-3 {
    padding-right: 20px!important;
}

.p-b-1, .p-y-1 {
    padding-bottom: 10px!important;
}

.p-t-1, .p-y-1 {
    padding-top: 10px!important;
}

.green-1
{
	background: #4caf50 !important;
}


.orng-1
{
    background: #ff7b00 !important;
}
.orng-2
{
    background: #ff9000 !important;
}
.orng-3
{
    background: #ffa500 !important;
}
.orng-4
{
    background: #ffba00 !important;
}
.margn-top0
{
  margin-top:0 !important;
}
.margn-tb0
{
    margin-top:0 !important;
    margin-bottom:0 !important;
}
.margn-top10
{
  margin-top:10px !important;
}
.margn-top15
{
  margin-top:15px !important;
}
.margn-top20
{
  margin-top:20px !important;
}
.margn-top22
{
  margin-top:22px !important;
}
.margn-top30
{
  margin-top:30px !important;
}
.margn-top40
{
  margin-top:40px !important;
}
.margin0
{
   margin:0 !important;
}
.pdng-top13
{
  padding-top:13px;
}
.pdng-top15
{
  padding-top:15px;
}
.pdng-top20
{
  padding-top:20px;
}
.pdng-top25
{
  padding-top:25px;
}
.no-padding
{
  padding:0 !important;
}
.no-padding-tblCon tr td
{
   padding:2px !important;
}
.card .card-content
{
  padding: 5px 20px;
}
.card .card-content .category
{
    color:#000;
}
.card .card-footer .stats
{
    color:#000;
}
.navbar .dropdown-menu li a:hover, .navbar .dropdown-menu li a:focus, .navbar .dropdown-menu li a:active, .navbar.navbar-default .dropdown-menu li a:hover, .navbar.navbar-default .dropdown-menu li a:focus, .navbar.navbar-default .dropdown-menu li a:active
{
    background-color: #ff9800;
    box-shadow: 0 12px 20px -10px rgba(255, 152, 0, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 152, 0, 0.2);

}
.dropdown-menu li a:hover, .dropdown-menu li a:focus, .dropdown-menu li a:active
{
    background-color: #ff9800;
    box-shadow: 0 12px 20px -10px rgba(255, 152, 0, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 152, 0, 0.2);
}
.dropdown-menu i.material-icons
{
    padding-right:5px;
}
.form-control-feedback
{
    opacity: 1;
}
.form-group
{
    margin-top:0;
}
.min-hgt100
{
    min-height:100px;
}
.card-stats .title
{
    padding-top:10px;
}
.colorlines
{
    padding: 0px 20px;
}
.skyblueline
{
    background: #00bcd4;
}
.redline
{
    background: #f44336;
}
.orangeline
{
    background: #ff9800;
}
ul.chatlinesList li
{
    list-style:none;
    padding: 5px;
}
ul.chatlinesList
{
    padding-top: 30px;
}
.card img {
    width: 30px !important;
    height: 30px !important;
    border-radius: 50%;
}
.card .QrcodeCon img
{
  width: 100% !important;
  height: auto !important;
  border-radius: 0 !important;
}


.navbar .dropdown-menu li a:hover, .navbar .dropdown-menu li a:focus, .navbar .dropdown-menu li a:active, .navbar.navbar-default .dropdown-menu li a:hover, .navbar.navbar-default .dropdown-menu li a:focus, .navbar.navbar-default .dropdown-menu li a:active
{
  background-color: #ff9800;
  box-shadow: 0 12px 20px -10px rgba(255, 152, 0, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 152, 0, 0.2);

}
.dropdown-menu li a:hover, .dropdown-menu li a:focus, .dropdown-menu li a:active
{
  background-color: #ff9800;
  box-shadow: 0 12px 20px -10px rgba(255, 152, 0, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(255, 152, 0, 0.2);
}
.dropdown-menu i.material-icons
{
  padding-right:5px;
}
.form-control-feedback
{
  opacity: 1;
}
.form-group
{
  margin-top:0;
}
.min-hgt100
{
  min-height:100px;
}
h2.title
{
  margin: 5px 0;
}
.ViewTables tr td
{
  width:50%;
}
.card.attendance
{
  margin-top:5px;
}
.nodata h4
{
    padding-top: 20px;
    text-align: center ;
}
span.calender-icon
{
  padding-top: 30px;
}
span.calender-mid-icon
{
  padding-top: 10px;
}
span.calender-big-icon
{
  padding-top: 38px;
}
span.d-sm-arrow-icon
{
  padding-top: 7px;
}
span.d-mid-arrow-icon
{
  padding-top: 10px;
}
span.d-md-arrow-icon
{
  padding-top: 27px;
}
span.d-arrow-icon
{
  padding-top: 32px;
}
span.d-big-arrow-icon {
    padding-top: 38px;
}
.download-btn
{
  line-height:40px;
  font-size: 16px;
  font-weight: bold;

}
select{
  padding-right:27px !important;
}
select.siteList
{
  padding: 5px;
  border-radius: 5px;
  border: 1px solid #ccc;
  margin-top: 30px;
}
.selectcon select.siteList
{
  margin-top: 5px;
}
i.CircleButton
{
      padding: 5px;
      border-radius: 50%;
      background:none;
}

button.btn.btn-circle {
    background: none;
    box-shadow: none;
    padding: 5px;
    border-radius: 50%;
    margin: 3px;
}
button.btn.btn-circle .material-icons
{
   font-size: 20px;
}
button.btn.btn-circle:hover
{
  color:#000;
}
.no-padding-tblCon .btn:hover, .btn:focus, .btn:active, .btn.active, .btn:active:focus, .btn:active:hover
{
  color:#333;
}
.txt-align-rgt
{
 text-align:right;
}
.txt-align-center
{
 text-align:center;
}
.rememberMe
{
  padding-left: 56px;
}
.card-login .card-content {
    padding: 15px 20px 0px 10px;
}
.card-login .card-content .input-group
{
  padding:10px 0;
}
.formcard .card-content .form-group
{
     padding: 5px 0;
     margin: 5px 0;
}
textarea.form-control {
    height: 36px;
}
/* ... */

